Change method calls in rest of the code